# SciTecCodingChallenge

./: Dockerfile  README.md  convert_csv_to_xml.py  start.sh  startLLAtoECEF.sh  startactivemq.sh  startsolr.sh  starttomcat.sh
LLAtoECEF/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  LLACSVClass.cpp  LLAClass.cpp  LLASolrClass.cpp  LLAUtility.cpp  LLAtoECEF  LLAtoECEF.cpp  LLAtoECEF.hpp  Makefile  SolrRequestClass.cpp  WriterMemoryClass.cpp  cmake_install.cmake
apache-tomcat-9.0.31/conf/: tomcat-users.xml
solr-8.4.1/server/solr/configsets/_default/conf/: managed-schema
